# cookie-cutter-project-template

./: cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: LICENSE  README.md  setup.cfg
