[metadata]
name = {{ cookiecutter.package_name }}
version = 0.1.0
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.email }}
description = A sample Python project.
long_description = file: README.md
long_description_content_type = text/markdown
license = {{ cookiecutter.license }}
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
